# dots-environmentalprofiles-service

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-image.yml  python-app.yml
src/ExampleCalculationService/: weatherservice.py
src/WeatherService/: weatherservice.py
test/: TestTemplate.py  TestWeatherService.py  test.esdl
