[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WeatherService"
version = "0.0.1"
authors = [
  { name="Gijs Verhoeven", email="g.verhoen.1@tue.nl" },
]
description = "A weather service for the DOTs platform. The service periodically publishes parts of a weather profile in the ESDL file"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/EES-TUe/Dots-calculation-service-template"
Issues = "https://github.com/EES-TUe/Dots-calculation-service-template/issues"